# unix-fun

./: .gitignore  .hindent.yaml  Cat.hs  ChangeLog.md  LICENSE  Ls.hs  README.md  package.yaml  stack.yaml  unix-fun.cabal
cat/: Main.hs
lib/Pavel/Xnu/: Xattr.hsc
ls/: Main.hs  test.sh
