name:                unix-fun
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Unix tools in Haskell
description:         Let's rewrite everything in Haskell.
license:             Other
license-file:        LICENSE
author:              Pavel Uvarov
maintainer:          puvar@puvar.net
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cat
  main-is:             Cat.hs
  build-depends:       base, bytestring
  default-language:    Haskell2010

executable ls
  main-is:             Ls.hs
  build-depends:       base, directory, filepath, unix
  default-language:    Haskell2010
  
